[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ynab-rs"]

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
bincode = "1.3.3"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "timeout"] }
ynab-rs = { path = "ynab-rs" }
